Updating the yaml file 1.2

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,4 +27,7 @@ jobs:
         run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
 
       - name: Run tests
-        run: pytest tests --maxfail=1 --disable-warnings -q
+        run: |
+          export PYTHONPATH=$GITHUB_WORKSPACE
+          pytest tests --maxfail=1 --disable-warnings -q
+
