--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,8 @@ jobs:
       - name: Run tests
         run: pytest tests --maxfail=1 --disable-warnings -q
 
+      - name: Install package
+        run: pip install -e .
+
+
 
