Updating the toml and re-initialize the __init__.py for the reports..

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,5 +29,8 @@ dev = [
 ]
 
 [tool.setuptools.packages.find]
-include = ["scanners*", "reports*", "bench*"]
+where = ["."]
+include = ["core*", "scanners*", "payloads*", "reports*"]
+exclude = ["tests*", "docs*"]
+
 
