--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Install dependencies (dev mode)
         run: |
-          python -m pip install --upgrade pip
-          pip install -e .[dev]
+          python -m pip install --upgrade pip setuptools wheel build
+          pip install --no-cache-dir -e .[dev]
 
       - name: Run pytest
         run: pytest tests --maxfail=1 --disable-warnings -q
@@ -47,12 +47,12 @@ jobs:
 
       - name: Install package (user mode)
         run: |
-          python -m pip install --upgrade pip
-          pip install .
+          python -m pip install --upgrade pip setuptools wheel build
+          pip install --no-cache-dir .
 
       - name: Import check
         run: python -c "import reports, core, scanners, payloads; print('✅ User install works fine')"
-  
+
   build-and-test-wheel:
     runs-on: ubuntu-latest
     strategy:
@@ -70,8 +70,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install build tools
-        run: |
-          python -m pip install --upgrade pip build
+        run: python -m pip install --upgrade pip setuptools wheel build
 
       - name: Build wheel + sdist
         run: python -m build
